--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Tiltshift\\Algoritmeregister\\": "lib/"
+            "AlgorithmRegister\\": "lib/"
         }
     }
 }
